--- a/css/style.css
+++ b/css/style.css
@@ -1,4 +1,4 @@
-@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500&display=swap");
+@import url("https://fonts.googleapis.com/css2?family=Poppins:wght@400;500;700;900&display=swap");
 * {
   padding: 0;
   margin: 0;
@@ -420,7 +420,7 @@ body {
 .banner__title {
   font-size: 70px;
   line-height: 80px;
-  font-weight: 400;
+  font-weight: 700;
   letter-spacing: 0.03em;
   color: #ffffff;
   margin-bottom: 84px;
@@ -570,4 +570,209 @@ body {
   .language-item:hover {
     color: #ffcc00;
   }
+}
+
+.services__body {
+  padding-top: 134px;
+  padding-bottom: 105px;
+}
+
+.services__title {
+  font-size: 50px;
+  line-height: 80px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  color: #ba0000;
+  margin-bottom: 115px;
+}
+
+.services__pages {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
+}
+
+.services__page {
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 270px;
+          flex: 1 0 270px;
+  margin-bottom: 20px;
+}
+
+.services__explore {
+  margin-bottom: 20px;
+  -webkit-box-flex: 1;
+      -ms-flex: 1 0 270px;
+          flex: 1 0 270px;
+}
+
+.serv-page {
+  margin-right: 30px;
+  max-width: 270px;
+}
+
+.serv-page__image {
+  height: 180px;
+  position: relative;
+}
+
+.serv-page__image img {
+  position: absolute;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  -o-object-fit: cover;
+     object-fit: cover;
+}
+
+.serv-page__title {
+  font-size: 20px;
+  line-height: 80px;
+  font-weight: 700;
+  text-transform: uppercase;
+  letter-spacing: 0.03em;
+  color: #ba0000;
+}
+
+.serv-page__text {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: #777777;
+  margin-bottom: 20px;
+}
+
+.serv-page__button {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 700;
+  letter-spacing: 0.03em;
+  color: #222222;
+}
+
+.serv-page__button i {
+  color: #ba0000;
+  -webkit-transform: translateY(2px);
+          transform: translateY(2px);
+}
+
+.explore {
+  padding: 30px;
+  max-width: 270px;
+  height: 339px;
+  background-color: #ba0000;
+}
+
+.explore__title {
+  font-size: 20px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  position: relative;
+  margin-bottom: 62px;
+}
+
+.explore__title::after {
+  content: "";
+  display: block;
+  width: 70px;
+  height: 2px;
+  background-color: #ffcc00;
+  position: absolute;
+  left: 0;
+  bottom: -30px;
+}
+
+.explore__text {
+  font-size: 16px;
+  line-height: 26px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin-bottom: 39px;
+}
+
+.explore__location {
+  max-width: 210px;
+  height: 50px;
+  background-color: #9d0000;
+  position: relative;
+  padding: 17px 18px;
+  margin-bottom: 20px;
+}
+
+.explore__location .explore__poppup {
+  width: 100%;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  max-height: 0px;
+  overflow: hidden;
+  -webkit-transition: all ease 0.3s;
+  transition: all ease 0.3s;
+  position: absolute;
+  top: 100%;
+  right: 0;
+  background-color: #9d0000;
+}
+
+.explore__location.active .explore__poppup {
+  padding: 10px;
+  max-height: none;
+  height: 150px;
+  overflow: auto;
+}
+
+.explore__location.active .explore__poppup li {
+  list-style: none;
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+  margin-bottom: 5px;
+  cursor: pointer;
+}
+
+.explore__location.active .explore__poppup li:hover {
+  color: #ffcc00;
+}
+
+@media (min-width: 768px) {
+  .explore__location:hover .explore__location-text {
+    color: #ffcc00;
+  }
+}
+
+.explore__location-text {
+  font-size: 16px;
+  font-weight: 400;
+  letter-spacing: 0.03em;
+  color: #ffffff;
+}
+
+.explore__location-button {
+  cursor: pointer;
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: 50px;
+  height: 100%;
+  background-color: #ffcc00;
+  padding: 18px;
+}
+
+.explore__location-button i {
+  font-size: 16px;
+  color: #ba0000;
 }
